new proj/src/objects/GE_PRM_Go_to_Market_St__c.object
<CustomObject>
    <description>PRM Object</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Concentrated_target_market__c</fullName>
        <description>Is the majority of the target market concentrated among a relatively small number of end users or within a defined territory?</description>
        <inlineHelpText>Is the majority of the target market concentrated among a relatively small number of end users or within a defined territory?</inlineHelpText>
        <label>Concentrated target market</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_End_user_pref_for_single_source__c</fullName>
        <description>Do end users have a strong preference for solutions or a single point of purchase which requires complimentary non-GE products &amp; services?</description>
        <inlineHelpText>Do end users have a strong preference for solutions or a single point of purchase which requires complimentary non-GE products &amp; services?</inlineHelpText>
        <label>End-user preference for single source</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_End_user_prefernce_to_deal_direct__c</fullName>
        <description>Do end users have a strong preference to deal directly with the OEM?</description>
        <inlineHelpText>Do end users have a strong preference to deal directly with the OEM?</inlineHelpText>
        <label>End-user preference to deal direct</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GE_Strong_rel_unique_knowledge__c</fullName>
        <description>Does GE have strong end user relationships or possess unique industry knowledge?</description>
        <inlineHelpText>Does GE have strong end user relationships or possess unique industry knowledge?</inlineHelpText>
        <label>GE Strong relationships/unique knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GE_offer_is_strat_proprietary_new__c</fullName>
        <description>Is the GE offering strategic/proprietary, new, or in the early stages of  the product lifecycle?</description>
        <inlineHelpText>Is the GE offering strategic/proprietary, new, or in the early stages of  the product lifecycle?</inlineHelpText>
        <label>GE offering is strategic/proprietary/new</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GTM_Score__c</fullName>
        <formula>IF( ISPICKVAL(GE_PRM_Local_laws_dictate_channels__c, &apos;No - Direct&apos;) , 5*7, -5*70) +
IF( ISPICKVAL(GE_PRM_End_user_prefernce_to_deal_direct__c ,&apos;Yes - Direct&apos;) , 5*8, -5*8)  +
IF( ISPICKVAL(GE_PRM_End_user_pref_for_single_source__c , &apos;No - Direct&apos;) , 5*5, -5*5) +
IF( ISPICKVAL(GE_PRM_Requires_unique_ser_capabilities__c , &apos;Yes - Indirect&apos;) , -5*9, 5*9) +
IF( ISPICKVAL(GE_PRM_Significant_T_C_flexibility__c , &apos;Yes - Indirect&apos;) , -5*7, 5*7) +
IF( ISPICKVAL(GE_PRM_GE_Strong_rel_unique_knowledge__c , &apos;Yes - Direct&apos;) , 5*9, -5*9) +
IF( ISPICKVAL(GE_PRM_Loc_near_key_market_and_end_users__c , &apos;Yes - Direct&apos;) , 5*6, -5*6) +
IF( ISPICKVAL(GE_PRM_Concentrated_target_market__c , &apos;Yes - Direct&apos;) , 5*7, -5*7) +
IF( ISPICKVAL(GE_PRM_Large_complex_high_dollar_or_proj__c , &apos;Yes - Direct&apos;) , 5*8, -5*8) +
IF( ISPICKVAL(GE_PRM_GE_offer_is_strat_proprietary_new__c , &apos;Yes - Direct&apos;) , 5*7, -5*7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTM Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GTM_Type__c</fullName>
        <description>To Figure out if GTM is Direct or In-Direct</description>
        <formula>If( GE_PRM_GTM_Score__c &gt; 0, &apos;Direct&apos;, If( GE_PRM_GTM_Score__c &lt; 0, &apos;Indirect&apos;, &apos;-&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To Figure out if GTM is Direct or In-Direct</inlineHelpText>
        <label>GTM Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Large_complex_high_dollar_or_proj__c</fullName>
        <description>Does the typical transaction have a large/complex scope, high dollar value, or is project orientated?</description>
        <inlineHelpText>Does the typical transaction have a large/complex scope, high dollar value, or is project orientated?</inlineHelpText>
        <label>Large/complex, high dollar or project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Loc_near_key_market_and_end_users__c</fullName>
        <description>Are GE sales resources located close to key markets and end users?</description>
        <inlineHelpText>Are GE sales resources located close to key markets and end users?</inlineHelpText>
        <label>Located near key markets and end users</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Local_laws_dictate_channels__c</fullName>
        <description>Do local regulations and laws dictate/require the use of external channels?</description>
        <inlineHelpText>Do local regulations and laws dictate/require the use of external channels?</inlineHelpText>
        <label>Local laws dictate channels</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_P_L__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Region__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>GE_PRM_P_L__c</controllingField>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa / Turkey / Pakistan / Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sahara Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia, New Zealand, Fiji  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Asia - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East ,  North Africa  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Saharan Africa  - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe  - Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Requires_unique_ser_capabilities__c</fullName>
        <description>Do end users require unique service capabilities (e.g. FX, logistics, import/export, fulfillment, skills) that are not part of GE&apos;s core capabilities or expertise?</description>
        <inlineHelpText>Do end users require unique service capabilities (e.g. FX, logistics, import/export, fulfillment, skills) that are not part of GE&apos;s core capabilities or expertise?</inlineHelpText>
        <label>Requires unique service capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Score__c</fullName>
        <description>Weighted score of GTM Strategy</description>
        <inlineHelpText>Weighted score of GTM Strategy</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Significant_T_C_flexibility__c</fullName>
        <description>Do typical deals require significant T&amp;C flexibility and acceptance of commercial risk that is outside GE standards?</description>
        <inlineHelpText>Do typical deals require significant T&amp;C flexibility and acceptance of commercial risk that is outside GE standards?</inlineHelpText>
        <label>Significant T&amp;C flexibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Sub_P_L__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_P_L__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Becker Control Valves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masoneilan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3_P_L__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Sub_P_L__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical &amp; Monitoring Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions (CMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered Systems (WES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Go To Market Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_PRM_GTM_Score__c</columns>
        <columns>GE_PRM_GTM_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Supporting Go To Market Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Go To Market Strategy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>